--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <html>
+    <html lang= "de"></html>
     <head>
-        <title>
-            Jakob Schulz
-        </title>
+        <title>Home</title>
+        <style> 
+            body {
+                background-color: white;
+            }
+            #title {
+                text-align: left;
+                font-size: 7vh;
+                text-shadow: 5px 5px 10px blue;
+            }
+        </style>
     </head>
     <body>
-        <h1>
-            Persönliche Informationen
-        </h1>
+        <h1>Jakob Schulz</h1>
     </body>
 </html>
