--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
-<html>
-    <html lang= "de"></html>
-    <head>
-        <title>Home</title>
-        <style> 
-            body {
-                background-color: white;
-            }
-            #title {
-                text-align: left;
-                font-size: 7vh;
-                text-shadow: 5px 5px 10px blue;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Jakob Schulz</h1>
-    </body>
-</html>
+<!DOCTYPE html>
+<html lang="de"> <!--Festlegen der Sprache-->
+
+<!--Spezifikationen fuer bessere Darstellung-->
+
+<head>
+    <meta charset="UTF-8"> <!--Verwendung des richtigen Zeichensatzes-->
+    <!--Sicherstellen, dass Website auch auf mobilen Geräten ordnungsgemäß funktioniert-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initital-scale =1.0">
+    <!--Einfgen der Schriftart-->
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <title>Home</title>
+</head>
+
+<body>
+    <!--Container-->
+    <div class="menu">
+        <div class="menulinks">
+            Home
+        </div class="menulinks">
+        <div class="menulinks">
+            Über mich
+        </div>
+        <div class="menulinks">
+            Kontakt
+        </div>
+        <div class="menulinks">
+            Sprachen
+        </div>
+    </div>
+    <div class="content">
+        <div class="overview" >
+            <h1 class="name">Jakob Schulz</h1> <!--class wird benoetigt, um der ueberschrift einen namen zu geben-->
+            Mein Name ist Jakob Schulz, ich bin ein angehender Informatiker und studiere im zweiten Semester an der Hochschule Furtwangen
+        </div>
+        <div class="picture">
+            <img src="Vorlage_bild.png">
+        </div>
+    </div>
+</body>
