Richtige Anordnung der Elemente der Home Seite und erste Animtationen der Home-Seite

--- a/index.html
+++ b/index.html
@@ -15,32 +15,39 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <!--Titel des Tabs-->
     <title>Home</title>
 </head>
 
 <body>
     <!--Container-->
-    <div class="menu">
-        <div class="menulinks">
-            Home
-        </div class="menulinks">
-        <div class="menulinks">
-            Über mich
+    <div class="home">
+        <div class="menuBar">
+            <div class="menulinks">
+                Home
+            </div>
+            <div class="menulinks">
+                Über mich
+            </div>
+            <div class="menulinks">
+                Kontakt
+            </div>
+            <div class="menulinks">
+                Sprachen
+            </div>
         </div>
-        <div class="menulinks">
-            Kontakt
-        </div>
-        <div class="menulinks">
-            Sprachen
+        <div class="content">
+            <div class="overview">
+                <h1>Jakob Schulz</h1> <!--class wird benoetigt, um der ueberschrift einen namen zu geben-->
+                <p>Mein Name ist Jakob Schulz, ich bin ein angehender Informatiker und studiere im zweiten Semester an
+                    der Hochschule Furtwangen</p>
+            </div>
+            <div class="picture">
+                <img src="Vorlage_bild.png">
+            </div>
         </div>
     </div>
-    <div class="content">
-        <div class="overview" >
-            <h1 class="name">Jakob Schulz</h1> <!--class wird benoetigt, um der ueberschrift einen namen zu geben-->
-            Mein Name ist Jakob Schulz, ich bin ein angehender Informatiker und studiere im zweiten Semester an der Hochschule Furtwangen
-        </div>
-        <div class="picture">
-            <img src="Vorlage_bild.png">
-        </div>
+    <div class="aboutMe">
+        Dies ist ein Test
     </div>
 </body>
