Funktionen: -Wird der button "über mich" das erste mal angeklickt, wird die animation abgespielt

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             <!--<a href="#aboutMe">-->
                 <!--Erzeugen eines buttons mit dem Namen buaboutMe-->
                 <input type="button" id="buaboutMe" value="Über mich">
-                <script src="button.js"></script>
             <!--</a>-->
             </input>
         </div>
@@ -54,7 +53,7 @@
         </div>
     </div>
     <div id="aboutMe">
-        <table>
+        <table class="tableaboutMe">
             <tr>
                 <th>Informationen über mich</th>
             </tr>
@@ -116,4 +115,5 @@
             </tr>
         </table>
     </div>
+    <script src="button.js"></script>
 </body>
