--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 
                     <label for="Message" class="messageLabel">Ihre Nachricht</label>
                     <div class="MessageInput">
+                        <!--maxLength: die maximale Anzahl an Zeichen-->
                         <textarea id="Message" name="Message" rows="6" maxlength="3000" required></textarea>
                     </div>
 
