Funktionen: -Erster Versuch die Menubar an mobile Geräte anzupassen

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 <input type="button" id="bucontact" class="buttonsStyle" value="Kontakt">
             </div>
             <div class="menulinks">
-                Sprachen
+                <!--Erzeugen eines buttons mit dem Namen contact. Zusaetzlich kann man diesem eine Klasse geben, sodass dieser einen bestimten Stil hat-->
+                <input type="button" id="bulanguages" class="buttonsStyle" value="Sprachen">
             </div>
         </div>
     </div>
