Funktionen: -Anpassen der Container fuer Mobilgeraete

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--Container-->
     <div id="menuBar">
-        <div id="ContentMenuBar">
+        <div class="ContentMenuBar">
             <div class="menulinks">
                 <!--Erzeugen eines buttons mit dem Namen buhome. Zusaetzlich kann man diesem eine Klasse geben, sodass dieser einen bestimten Stil hat-->
                 <input type="button" id="buhome" class="buttonsStyle" value="Home">
@@ -41,19 +41,17 @@
             </div>
         </div>
     </div>
-    <div id="home">
-        <div id="content">
-            <div id="overview">
+    <div class="home">
+        <div class="content">
+            <div class="overview">
                 <h1>Jakob Schulz</h1> <!--class wird benoetigt, um der ueberschrift einen namen zu geben-->
                 <p>Mein Name ist Jakob Schulz, ich bin ein angehender Informatiker und studiere im zweiten Semester an
                     der Hochschule Furtwangen</p>
             </div>
-            <div id="picture">
-                <img src="Vorlage_bild.png">
-            </div>
+            <img class="pictureAboutMe" src="Vorlage_bild.png">
         </div>
     </div>
-    <div id="aboutMe">
+    <div class="aboutMe">
         <table class="tableaboutMe">
             <tr>
                 <th>Informationen über mich</th>
@@ -71,11 +69,11 @@
                 <td>1 Bruder</td>
             </tr>
             <tr>
-                <td>Wohnort</td>
+                <td>Wohnort:</td>
                 <td>Baden-Würtemberg</td>
             </tr>
             <tr>
-                <td>Schulbildung</td>
+                <td>Schulbildung:</td>
                 <td>Allgemeinbildendes Abitur</td>
             </tr>
             <tr>
@@ -116,9 +114,9 @@
             </tr>
         </table>
     </div>
-    <div id="contact">
+    <div class="contact">
         <div class="contact_information">
-            <table id="tablesocialmedia">
+            <table class="tablesocialmedia">
                 <tr>
                     <th>Kontaktinformationen</th>
                 </tr>
